# axtix-todo

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: Cargo.toml  rustfmt.toml
backend/examples/: db.rs  error.rs  trait01.rs  trait02.rs  trait03.rs  trait04.rs
backend/migrations/: create_todos_table.sql
backend/src/: main.rs
backend/src/Error/: mod.rs  user_error.rs
backend/src/app/: mod.rs
backend/src/config/: mod.rs  types.rs
backend/src/config/routes/: mod.rs  todo.rs
backend/src/domain/: consts.rs  mod.rs  repository.rs  todo.rs  types.rs
backend/src/repository/: mod.rs  todo.rs
backend/src/request/: mod.rs
backend/src/response/: mod.rs
backend/src/routes/: mod.rs  todo.rs
docker/postgres/: Dockerfile
docker/rust/: Dockerfile
