[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.21.2", features = ["full"] }
derive_more = "0.99.17"
serde = { version="1.0.147", features=["derive"] }
